--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype HTML>
 <head>
   <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
@@ -9,10 +10,10 @@
   </section>
   <section class="buttons">
     <div>
-      <h2 id="button7">7</h2><h2 id="button8">8</h2><h2 id="button9">9</h2> <h2 id="buttonPlus">+</h2>
-      <h2 id="button4">4</h2><h2 id="button5">5</h2><h2 id="button6">6</h2> <h2 id="buttonMinus">-</h2>
-      <h2 id="button1">1</h2><h2 id="button2">2</h2><h2 id="button3">3</h2> <h2 id="buttonDivide">/</h2>
-      <h2 id="button0">0</h2><h2 id="buttonDot">.</h2><h2 id="buttonEqual">=</h2> <h2 id="buttonMultiply">*</h2>
+      <h2 class="blueButtons" id="button7">7</h2><h2 class="blueButtons" id="button8">8</h2><h2 class="blueButtons" id="button9">9</h2> <h2 class="greyButtons" id="buttonPlus">+</h2>
+      <h2 class="blueButtons" id="button4">4</h2><h2 class="blueButtons" id="button5">5</h2><h2 class="blueButtons" id="button6">6</h2> <h2 class="greyButtons"  id="buttonMinus">-</h2>
+      <h2 class="blueButtons" id="button1">1</h2><h2  class="blueButtons" id="button2">2</h2><h2 class="blueButtons" id="button3">3</h2> <h2 class="greyButtons"  id="buttonDivide">/</h2>
+      <h2 class="blueButtons" id="button0">0</h2><h2 class="greyButtons"  id="buttonDot">.</h2><h2 class="greyButtons"  id="buttonEqual">=</h2> <h2 class="greyButtons"  id="buttonMultiply">*</h2>
     </div>
   </section>
 
